src/main/default/objects/Work_Order_Item__c/Work_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Work Order Item</label>
    <nameField>
        <displayFormat>WOI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>