src/main/default/objects/Work_Order_Item__c/fields/Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total__c</fullName>
    <formula>Actual_Quantity__c *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>