src/main/default/objects/Work_Order_Item__c/fields/Catalog_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Code__c</fullName>
    <formula>Catalog_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Item Code</label>
    <type>Text</type>
</CustomField>