src/main/default/objects/Work_Order_Item__c/fields/Catalog_UOM__c.field-meta.xml
<CustomField>
    <fullName>Catalog_UOM__c</fullName>
    <formula>TEXT( Catalog_Item__r.UOM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog UOM</label>
    <type>Text</type>
</CustomField>