src/main/default/objects/Work_Order_Item__c/fields/Planned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Planned_Quantity__c</fullName>
    <label>Planned Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>