src/main/default/objects/Work_Order_Item__c/fields/Planned_Total__c.field-meta.xml
<CustomField>
    <fullName>Planned_Total__c</fullName>
    <formula>Cost__c *  Planned_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>